--- a/prebuilt/common/etc/audio_effects.conf
+++ b/prebuilt/common/etc/audio_effects.conf
@@ -15,14 +15,26 @@ libraries {
   reverb {
     path /system/lib/soundfx/libreverbwrapper.so
   }
-  visualizer {
+  visualizer_sw {
     path /system/lib/soundfx/libvisualizer.so
   }
-  downmix {
-    path /system/lib/soundfx/libdownmix.so
+  visualizer_hw {
+    path /system/lib/soundfx/libqcomvisualizer.so
+  }
+  fmas {
+    path /system/lib/soundfx/libfmas.so
+  }
+  proxy {
+    path /system/lib/soundfx/libeffectproxy.so
   }
   loudness_enhancer {
     path /system/lib/soundfx/libldnhncr.so
+  }
+  qcom_pre_processing {
+    path /system/lib/soundfx/libqcomvoiceprocessing.so
+  }
+  mot_speaker_helper {
+    path /system/lib/soundfx/libspeakerbundle.so
   }
 }
 
@@ -58,8 +70,8 @@ effects {
     uuid 8631f300-72e2-11df-b57e-0002a5d5c51b
   }
   virtualizer {
-    library bundle
-    uuid 1d4033c0-8557-11df-9f2d-0002a5d5c51b
+    library fmas
+    uuid 36103c52-8514-11e2-9e96-0800200c9a66
   }
   equalizer {
     library bundle
@@ -86,18 +98,67 @@ effects {
     uuid 172cdf00-a3bc-11df-a72f-0002a5d5c51b
   }
   visualizer {
-    library visualizer
-    uuid d069d9e0-8329-11df-9168-0002a5d5c51b
+    library proxy
+    uuid af8da7e0-2ca1-11e3-b71d-0002a5d5c51b
+
+    libsw {
+      library visualizer_sw
+      uuid  d069d9e0-8329-11df-9168-0002a5d5c51b
+    }
+
+    libhw {
+      library visualizer_hw
+      uuid 7a8044a0-1a71-11e3-a184-0002a5d5c51b
+    }
   }
   downmix {
-    library downmix
-    uuid 93f04452-e4fe-41cc-91f9-e475b6d1d69f
+    library fmas
+    uuid 36103c53-8514-11e2-9e96-0800200c9a66
   }
   loudness_enhancer {
     library loudness_enhancer
     uuid fa415329-2034-4bea-b5dc-5b381c8d1e2c
   }
+  aec {
+    library v4a_fx
+    uuid 41d3c987-e6cf-11e3-a88a-11aba5d5c51b
+  }
+  ns {
+    library v4a_fx
+    uuid 41d3c987-e6cf-11e3-a88a-11aba5d5c51b
+  }
+  music_helper {
+    library proxy
+    uuid 00905020-4e52-11e4-83aa-0002a5d5c51b
+
+    libsw {
+      library mot_speaker_helper
+      uuid bce61ec2-eca4-445c-9dcb-91cc7cce01ab
+    }
+
+    libhw {
+      library mot_speaker_helper
+      uuid bce61ec2-eca4-445c-9dcb-91cc7cce01b0
+    }
+  }
+  voice_helper {
+    library mot_speaker_helper
+    uuid bce61ec2-eca4-445c-9dcb-91cc7cce01ac
+  }
+  ring_helper {
+    library mot_speaker_helper
+    uuid bce61ec2-eca4-445c-9dcb-91cc7cce01ad
+  }
+  notification_helper {
+    library mot_speaker_helper
+    uuid bce61ec2-eca4-445c-9dcb-91cc7cce01ae
+  }
+  tts_helper {
+    library mot_speaker_helper
+    uuid bce61ec2-eca4-445c-9dcb-91cc7cce01af
+  }
 }
+
 
 # Default pre-processing effects. Add to audio_effect.conf "effects" section if
 # audio HAL implements support for them.
@@ -154,3 +215,31 @@ effects {
 #
 # TODO: add default audio pre processor configurations after debug and tuning phase
 #
+
+pre_processing {
+    voice_communication {
+        aec {}
+        ns {}
+    }
+}
+
+output_session_processing {
+    music {
+        music_helper { }
+    }
+    ring {
+        ring_helper { }
+    }
+    alarm {
+        ring_helper { }
+    }
+    voice_call {
+        voice_helper { }
+    }
+    tts {
+        tts_helper { }
+    }
+    notification {
+        notification_helper { }
+    }
+}
